<!-- Copyright (c) 2024 Filippo Ferrario -->
<!-- Licensed under the MIT License. See the LICENSE. -->
<resources>
    <string name="app_name">NetKit</string>
    <string name="subnets">Subnets</string>
    <string name="tools">Tools</string>
    <string name="wildcards">Wildcards</string>
    <string name="about">About</string>
    <string name="choose_ip_version">Choose an IP version</string>ù
    <string name="ip4">IPv4</string>
    <string name="ip6">IPv6</string>
    <string name="compute">Compute</string>
    <string name="add_size">Add size</string>
    <string name="network">Network</string>
    <string name="subnet_mask">Subnet mask</string>
    <string name="broadcast">Broadcast</string>
    <string name="hosts_count">Hosts count</string>
    <string name="sizes">Sizes</string>
    <string name="reset">Reset</string>
    <string name="enter_ipv6">IPv6 base address</string>
    <string name="subnets_count_ipv6">IPv6 subnets count</string>
    <string name="global_routing_prefix">Global routing prefix</string>
    <string name="choose_a_method">Choose a method</string>
    <string name="lower_bound">Lower bound</string>
    <string name="upper_bound">Upper bound</string>
    <string name="network_address">Network address</string>
    <string name="range">Range</string>
    <string name="greater">Greater</string>
    <string name="smaller">Smaller</string>
    <string name="even">Even</string>
    <string name="odd">Odd</string>
    <string name="class_string">Class</string>
    <string name="wildcard_mask">Wildcard mask</string>
    <string name="support_ip">Support IP</string>
    <string name="choose_class">Choose a class</string>
    <string name="report_bug">Report a bug</string>
    <string name="privacy">Privacy</string>
    <string name="about_description">NetKit is an open-source Android application which gives you access to basic networking tools. NetKit gathers no data about either the user or her device.</string>
    <string name="ip">IP</string>
    <string name="compress">Compress</string>
    <string name="compressed">Compressed</string>
    <string name="address_squeezer">Address squeezer</string>
    <string name="invalid_ip">Invalid IP!</string>
    <string name="find_subnet">Find subnet</string>
    <string name="get_network">Get network</string>
    <string name="subnet_number">Subnet number</string>
    <string name="host_ip">Host IP</string>
    <string name="subnet_address">Subnet address</string>
    <string name="invalid_subnet_mask">Invalid subnet mask!</string>
    <string name="invalid_subnet_number">Invalid subnet number!</string>
    <string name="invalid_prefix">Invalid prefix!</string>
    <string name="invalid_subnet_count">Invalid subnet count!</string>
    <string name="invalid_lower_bound">Invalid lower bound!</string>
    <string name="invalid_upper_bound">Invalid upper bound!</string>
    <string name="invalid_network_address">Invalid network address!</string>
    <string name="active_page_title">Active page\'s title</string>
    <string name="find_subnet_button">Find subnet button</string>
    <string name="get_network_button">Get network button</string>
    <string name="netkit_logo">NetKit\'s logo</string>
    <string name="age_verification_error">Age Verification Error</string>
    <string name="close_app">Close App</string>
    <string name="parental_access_denied">Access denied by parental supervision settings.</string>
    <string name="parental_access_pending">Access pending parental approval.</string>
    <string name="unknown_age_verification">Unknown age verification status.</string>
    <string name="minimum_age_warning">You must be at least 3 to use this application.</string>
    <string name="unable_to_verify_age">Unable to verify your age. Please, visit the Play Store to confirm you age.</string>
    <string name="age_verification_error_2">Unable to verify your age. Please, install or enable the Play Store.</string>
    <string name="age_verification_error_3">Unable to verify your age. Please, check your network connection.</string>
    <string name="age_verification_error_4">Unable to verify your age. Please, install or enable Play Services.</string>
    <string name="age_verification_error_5">Unable to verify your age. Please, update your Play Store version.</string>
    <string name="age_verification_error_6">Unable to verify your age. Please, update your Play Store version.</string>
    <string name="age_verification_error_7">Unable to verify your age. Please, update Play Services.</string>
    <string name="age_verification_error_8">Unable to verify your age. Please, try again later.</string>
</resources>
