<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2024 Filippo Ferrario -->
<!-- Licensed under the MIT License. See the LICENSE. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.ferrariofilippo.netkit.viewmodel.ToolsIPv6ViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ToolsIPv6Fragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/address_squeezer"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipToSqueezeTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:hint="@string/ip"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789AaBbCcDdEeFf:"
                    android:maxLength="40"
                    android:text="@={vm.addressIPv6ToSqueeze}" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:gravity="center">

                <Button
                    android:id="@+id/resetCompressButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/reset"
                    android:visibility="@{vm.canResetSqueeze ? View.VISIBLE : View.GONE}" />

                <Button
                    android:id="@+id/compressIPv6Button"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compress" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{vm.canResetSqueeze ? View.VISIBLE : View.GONE}">

                <TextView
                    android:id="@+id/compressedAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="12dp"
                    android:text="@string/compressed"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                <TextView
                    android:id="@+id/compressedAddressValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/compressedAddressLabel"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
            </RelativeLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>
