<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2024 Filippo Ferrario -->
<!-- Licensed under the MIT License. See the LICENSE. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.ferrariofilippo.netkit.viewmodel.SubnetViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SubnetFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="96dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipVersionPicker"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_ip_version">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/sizes"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:visibility="@{vm.ipVersionIndex == 0 ? View.VISIBLE : View.GONE}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sizesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:visibility="@{vm.ipVersionIndex == 0 ? View.VISIBLE : View.GONE}"
                tools:listitem="@layout/size_item" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipv6AddressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:hint="@string/enter_ipv6"
                android:visibility="@{vm.ipVersionIndex == 1 ? View.VISIBLE : View.GONE}"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789AaBbCcDdEeFf:"
                    android:inputType="text"
                    android:maxLength="40"
                    android:text="@={vm.iPv6Address}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipv6SubnetsCountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:hint="@string/subnets_count_ipv6"
                android:visibility="@{vm.ipVersionIndex == 1 ? View.VISIBLE : View.GONE}"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:text="@={`` + vm.subnetsCountV6}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/globalRoutingPrefixInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:hint="@string/global_routing_prefix"
                android:visibility="@{vm.ipVersionIndex == 1 ? View.VISIBLE : View.GONE}"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:text="@={`` + vm.globalRoutingPrefix}" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <Button
                    android:id="@+id/resetSubnetsButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/reset"
                    android:visibility="@{vm.canReset ? View.VISIBLE : View.GONE}" />

                <Button
                    android:id="@+id/computeSubnetsButton"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compute" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:foreground="?attr/colorPrimary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subnetsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:visibility="@{vm.ipVersionIndex == 0 ? View.VISIBLE : View.GONE}"
                tools:listitem="@layout/subnet_item" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subnetsIPv6RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:visibility="@{vm.ipVersionIndex == 1 ? View.VISIBLE : View.GONE}"
                tools:listitem="@layout/subnet_item" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>
